[tool.poetry]
name = "llmlingua-api"
version = "0.1.0"
description = ""
authors = ["Sayo <ws11579@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pyyaml = "^6.0.1"
transformers = "^4.37.2"
tiktoken = "^0.6.0"
nltk = "^3.8.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
